--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory=/home/lclayton/ansible/inventory
+inventory=./inventory.yml
 remote_user=lclayton
 ask_pass=false
 [privilege_esculation]
